acvm-repo/msgpack_tagged/tests/compile_fail/enum_variant_tag_default.stderr
error: `default` modifier is not allowed on enum variants
 --> tests/compile_fail/enum_variant_tag_default.rs:9:5
  |
9 |     #[tag(0, default)]
  |     ^^^^^^^^^^^^^^^^^^
